# ptools

./: pyproject.toml
ptools/cli/: __init__.py  video2txt.py
